--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TrastearPokemon</string>
+    <string name="noseleccion">Selecciona un campo de tu equipo</string>
+    <string name="añadido">Pokemon agregado al Equipo</string>
+    <string name="noencontrado">Pokemon no encontrado</string>
 </resources>
