cambios login y tablas oak main buen JSON

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="añadido">Pokemon agregado al Equipo</string>
     <string name="noencontrado">Pokemon no encontrado</string>
     <string name="title_activity_login">Login</string>
+    <string name="textouno">Hola, soy el Profesor Pokemon,<br /> he encargado al mejor equipo de desarrolladores de Android<br />
+                                una aplicacion para entrenadores Pokemon</string>
+    <string name="textodos">Esta aplicacion permitira a los entrenadores mirar<br /> los datos de los pokemon y hacerse un equipo a su gusto</string>
+    <string name="textotres">Muchas gracias a los desarrolladores :<br /> Sergio Alejaldre,<br /> Diego Urmente,<br />Guillermo Fabian, <br />Josemi y Daniel Gimenez</string>
 </resources>
